Unreal: menu for debugger window

--- a/pentevo/unreal/Unreal/Unreal.rc
+++ b/pentevo/unreal/Unreal/Unreal.rc
@@ -13,81 +13,110 @@
 //
 // Menu resources
 //
-LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
+LANGUAGE LANG_NEUTRAL, SUBLANG_NEUTRAL
+IDR_DEBUGMENU MENU
+{
+    POPUP "Monitor"
+    {
+        MENUITEM "Load block", IDM_MON_LOADBLOCK
+        MENUITEM "Save block", IDM_MON_SAVEBLOCK
+        MENUITEM "Fill block", IDM_MON_FILLBLOCK
+        MENUITEM SEPARATOR
+        MENUITEM "Ripper's tool", IDM_MON_RIPPER
+    }
+    POPUP "Debug"
+    {
+        MENUITEM "Continue", IDM_DEBUG_RUN
+        MENUITEM SEPARATOR
+        MENUITEM "Step into", IDM_DEBUG_STEP
+        MENUITEM "Step over", IDM_DEBUG_STEPOVER
+        MENUITEM "Till return", IDM_DEBUG_TILLRETURN
+        MENUITEM "Run to cursor", IDM_DEBUG_RUNTOCURSOR
+    }
+    POPUP "Breakpoints"
+    {
+        MENUITEM "Toggle breakpoint", IDM_BREAKPOINT_TOGGLE
+        MENUITEM "Manager", IDM_BREAKPOINT_MANAGER
+    }
+}
+
+
+
+LANGUAGE LANG_NEUTRAL, SUBLANG_DEFAULT
 IDR_MAINMENU MENU
 {
     POPUP "File"
     {
-        MENUITEM "Load...", ID_LOAD
+        MENUITEM "Load...", IDM_LOAD
         POPUP "Save"
         {
-            MENUITEM "Snapshot/Disk A", ID_SAVE
-            MENUITEM "Disk B", ID_SAVE_DISKB
-            MENUITEM "Disk C", ID_SAVE_DISKC
-            MENUITEM "Disk D", ID_SAVE_DISKD
+            MENUITEM "Snapshot/Disk A", IDM_SAVE
+            MENUITEM "Disk B", IDM_SAVE_DISKB
+            MENUITEM "Disk C", IDM_SAVE_DISKC
+            MENUITEM "Disk D", IDM_SAVE_DISKD
         }
         POPUP "Quick load"
         {
-            MENUITEM "1", ID_QUICKLOAD_1
-            MENUITEM "2", ID_QUICKLOAD_2
-            MENUITEM "3", ID_QUICKLOAD_3
+            MENUITEM "1", IDM_QUICKLOAD_1
+            MENUITEM "2", IDM_QUICKLOAD_2
+            MENUITEM "3", IDM_QUICKLOAD_3
         }
         POPUP "Quick save"
         {
-            MENUITEM "1", ID_QUICKSAVE_1
-            MENUITEM "2", ID_QUICKSAVE_2
-            MENUITEM "3", ID_QUICKSAVE_3
+            MENUITEM "1", IDM_QUICKSAVE_1
+            MENUITEM "2", IDM_QUICKSAVE_2
+            MENUITEM "3", IDM_QUICKSAVE_3
         }
         MENUITEM SEPARATOR
-        MENUITEM "Start audio recording", ID_AUDIOREC
-        MENUITEM "Make screenshot", ID_MAKESCREENSHOT
+        MENUITEM "Start audio recording", IDM_AUDIOREC
+        MENUITEM "Make screenshot", IDM_MAKESCREENSHOT
         MENUITEM SEPARATOR
-        MENUITEM "Exit", ID_EXIT
+        MENUITEM "Exit", IDM_EXIT
     }
     POPUP "Emulation"
     {
+        MENUITEM "Pause", IDM_PAUSE, GRAYED
+        MENUITEM "Maximum speed", IDM_MAXIMUMSPEED
+        MENUITEM SEPARATOR
         POPUP "Reset"
         {
-            MENUITEM "Default", ID_RESET
+            MENUITEM "Default", IDM_RESET
             MENUITEM SEPARATOR
-            MENUITEM "Basic 128", ID_RESET_128
-            MENUITEM "Basic 48", ID_RESET_48
-            MENUITEM "TR-DOS", ID_RESET_DOS
-            MENUITEM "Service", ID_RESET_SERVICE
-            MENUITEM "Cache", ID_RESET_CACHE
+            MENUITEM "Basic 128", IDM_RESET_128
+            MENUITEM "Basic 48", IDM_RESET_48
+            MENUITEM "TR-DOS", IDM_RESET_DOS
+            MENUITEM "Service", IDM_RESET_SERVICE
+            MENUITEM "Cache", IDM_RESET_CACHE
             MENUITEM SEPARATOR
-            MENUITEM "GeneralSound", ID_RESET_GS
+            MENUITEM "GeneralSound", IDM_RESET_GS
         }
         POPUP "NMI"
         {
-            MENUITEM "Generate", ID_NMI
+            MENUITEM "Generate", IDM_NMI
             MENUITEM SEPARATOR
-            MENUITEM "TR-DOS", ID_NMI_DOS
-            MENUITEM "Cache", ID_NMI_CACHE
+            MENUITEM "TR-DOS", IDM_NMI_DOS
+            MENUITEM "Cache", IDM_NMI_CACHE
         }
-        MENUITEM SEPARATOR
-        POPUP "Speed"
-        {
-            MENUITEM "Maximum speed", ID_MAXIMUMSPEED
-        }
+        MENUITEM "Poke", IDM_POKE
         MENUITEM SEPARATOR
         POPUP "Tape"
         {
-            MENUITEM "Start/stop tape", ID_TAPE_CONTROL
+            MENUITEM "Start/stop tape", IDM_TAPE_CONTROL
             MENUITEM SEPARATOR
-            MENUITEM "Use tape traps", ID_USETAPETRAPS
-            MENUITEM "Autostart tape", ID_AUTOSTARTTAPE
+            MENUITEM "Use tape traps", IDM_USETAPETRAPS
+            MENUITEM "Autostart tape", IDM_AUTOSTARTTAPE
         }
         MENUITEM SEPARATOR
-        MENUITEM "Video filter", ID_VIDEOFILTER
-        MENUITEM "Fullscreen", ID_FULLSCREEN
-        MENUITEM "Settings", ID_SETTINGS
+        MENUITEM "Video filter", IDM_VIDEOFILTER
+        MENUITEM "Fullscreen", IDM_FULLSCREEN
+        MENUITEM SEPARATOR
+        MENUITEM "Settings", IDM_SETTINGS
     }
     MENUITEM "Debugger", IDM_DEBUGGER
     POPUP "Help"
     {
-        MENUITEM "Shortkeys", ID_HELP_SHORTKEYS
-        MENUITEM "About", 40057
+        MENUITEM "Shortkeys", IDM_HELP_SHORTKEYS
+        MENUITEM "About", IDM_HELP_ABOUT, GRAYED
     }
 }
 
