Unreal: basic GMX support, Scorpion turbo support

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -8,7 +8,7 @@ ShareCPU=1      ; 1 - only for fast CPUs (incompatible with SoundDrv=none)
 ;
 HighPriority=1  ; boost process priority, disabled on ShareCPU=0
 ;
-; high memory: PENTAGON, SCORPION, PROFSCORP, PROFI, ATM450, ATM710, KAY, ATM3, TSL, LSY
+; high memory: PENTAGON, SCORPION, PROFSCORP, GMX, PROFI, ATM450, ATM710, KAY, ATM3, TSL, LSY
 HIMEM=TSL
 ; memory size, KB
 RAMSize=4096
@@ -518,6 +518,9 @@ SCORP=rom\scorpion.rom
 
 ; for SMUC 512k ROM, use file.rom:0 and file.rom:1 to select active bank
 PROFROM=rom\scorp_prof401.ROM:0
+
+; standard GMX 512K rom
+GMX=rom\gmx.rom
 
 ; standard KAY 64K rom
 KAY=rom\kay1024.rom
