Unreal: Profi stereo covox adder; GUI sound tab updated

--- a/pentevo/unreal/Unreal/Unreal.rc
+++ b/pentevo/unreal/Unreal/Unreal.rc
@@ -448,7 +448,7 @@ FONT 8, "MS Sans Serif"
 
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
-IDD_SOUND DIALOG 0, 0, 214, 145
+IDD_SOUND DIALOG 0, 0, 214, 173
 STYLE DS_3DLOOK | DS_SETFONT | WS_BORDER | WS_CHILDWINDOW
 FONT 8, "MS Sans Serif"
 {
@@ -459,21 +459,27 @@ FONT 8, "MS Sans Serif"
     CONTROL         "Slider2", IDC_SND_MICOUT, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 30, 130, 10, WS_EX_LEFT
     LTEXT           "MIC &in", IDC_STATIC, 7, 41, 60, 8, SS_LEFT, WS_EX_LEFT
     CONTROL         "Slider3", IDC_SND_MICIN, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 42, 130, 10, WS_EX_LEFT
-    LTEXT           "Sound C&hip:", IDC_STATIC, 7, 56, 63, 8, SS_LEFT, WS_EX_LEFT
-    CONTROL         "Slider4", IDC_SND_AY, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 56, 130, 10, WS_EX_LEFT
-    LTEXT           "&Covox on FB", IDC_STATIC, 7, 70, 63, 8, SS_LEFT, WS_EX_LEFT
-    CONTROL         "Slider6", IDC_SND_COVOXFB, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 70, 130, 10, WS_EX_LEFT
-    LTEXT           "Co&vox on DD", IDC_STATIC, 7, 84, 65, 8, SS_LEFT, WS_EX_LEFT
-    CONTROL         "Slider7", IDC_SND_COVOXDD, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 84, 130, 10, WS_EX_LEFT
-    LTEXT           "S&oundrive", IDC_STATIC, 7, 97, 65, 8, SS_LEFT, WS_EX_LEFT
-    CONTROL         "Slider8", IDC_SND_SD, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 96, 130, 10, WS_EX_LEFT
-    LTEXT           "B&ASS mod-player", IDC_BASS_TITLE, 7, 109, 56, 8, SS_LEFT, WS_EX_LEFT
-    CONTROL         "Slider1", IDC_SND_BASS, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 108, 82, 10, WS_EX_LEFT
-    PUSHBUTTON      "&save mod", IDB_SAVEMOD, 163, 107, 44, 12, 0, WS_EX_LEFT
-    LTEXT           "G&eneral Sound", IDC_GS_TITLE, 7, 122, 68, 8, SS_LEFT, WS_EX_LEFT
-    CONTROL         "Slider2", IDC_SND_GS, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 121, 82, 10, WS_EX_LEFT
-    AUTOCHECKBOX    "GS &Reset", IDC_GSRESET, 164, 121, 43, 10, 0, WS_EX_LEFT
+    LTEXT           "AY/YM", IDC_STATIC, 7, 53, 24, 9, SS_LEFT, WS_EX_LEFT
+    CONTROL         "Slider4", IDC_SND_AY, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 54, 130, 10, WS_EX_LEFT
+    LTEXT           "&Covox on FB", IDC_STATIC, 7, 79, 63, 8, SS_LEFT, WS_EX_LEFT
+    CONTROL         "Slider6", IDC_SND_COVOXFB, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 79, 130, 10, WS_EX_LEFT
+    LTEXT           "Co&vox on DD", IDC_STATIC, 7, 92, 65, 8, SS_LEFT, WS_EX_LEFT
+    CONTROL         "Slider7", IDC_SND_COVOXDD, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 92, 130, 10, WS_EX_LEFT
+    LTEXT           "S&oundrive", IDC_STATIC, 7, 118, 65, 8, SS_LEFT, WS_EX_LEFT
+    CONTROL         "Slider8", IDC_SND_SD, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 119, 130, 10, WS_EX_LEFT
+    LTEXT           "B&ASS mod-player", IDC_BASS_TITLE, 7, 132, 56, 8, SS_LEFT, WS_EX_LEFT
+    CONTROL         "Slider1", IDC_SND_BASS, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 132, 82, 10, WS_EX_LEFT
+    PUSHBUTTON      "&save mod", IDB_SAVEMOD, 163, 131, 44, 12, 0, WS_EX_LEFT
+    LTEXT           "G&eneral Sound", IDC_GS_TITLE, 7, 145, 68, 8, SS_LEFT, WS_EX_LEFT
+    CONTROL         "Slider2", IDC_SND_GS, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 145, 82, 10, WS_EX_LEFT
+    AUTOCHECKBOX    "GS &Reset", IDC_GSRESET, 164, 145, 43, 10, 0, WS_EX_LEFT
     AUTOCHECKBOX    "&Lowpass filter", IDC_SOUNDFILTER, 115, 7, 79, 10, 0, WS_EX_LEFT
+    CONTROL         "Slider7", IDC_SND_COVOXPROFI, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 105, 130, 10, WS_EX_LEFT
+    LTEXT           "Covox on &Profi", IDC_STATIC, 7, 105, 47, 9, SS_LEFT, WS_EX_LEFT
+    LTEXT           "SAA1099", IDC_STATIC, 7, 66, 31, 9, SS_LEFT, WS_EX_LEFT
+    CONTROL         "Slider4", IDC_SND_SAA, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 66, 130, 10, WS_EX_LEFT
+    CONTROL         "Slider7", IDC_SND_MOONSOUND, TRACKBAR_CLASS, WS_TABSTOP | TBS_BOTH | TBS_NOTICKS, 77, 159, 130, 10, WS_EX_LEFT
+    LTEXT           "Moo&nSound", IDC_STATIC, 7, 158, 40, 9, SS_LEFT, WS_EX_LEFT
 }
 
 
@@ -483,7 +489,7 @@ IDD_TAPE DIALOG 0, 0, 210, 135
 STYLE DS_3DLOOK | DS_SETFONT | WS_BORDER | WS_CHILDWINDOW
 FONT 8, "MS Sans Serif"
 {
-    LISTBOX         IDC_TAPE, 7, 7, 194, 74, WS_TABSTOP | WS_VSCROLL | LBS_NOTIFY, WS_EX_LEFT
+    LISTBOX         IDC_TAPE, 7, 7, 194, 66, WS_TABSTOP | WS_VSCROLL | LBS_NOTIFY, WS_EX_LEFT
     LTEXT           "Note: ESC,F3 - load tape, ESC,F7 - start/stop tape", IDC_STATIC, 7, 121, 183, 8, SS_LEFT, WS_EX_LEFT
     AUTOCHECKBOX    "Tape &autostart", IDC_TAPE_AUTOSTART, 7, 108, 66, 8, 0, WS_EX_LEFT
     AUTOCHECKBOX    "Tape &traps", IDC_TAPE_TRAPS, 106, 108, 54, 8, 0, WS_EX_LEFT
