--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -371,9 +371,11 @@ MicInVol=1000      ; tape loading
 AYVol=8192         ; volume of each channel
 CovoxFBVol=8192    ; pentagon covox
 CovoxDDVol=6000    ; scorpion covox
+CovoxProfiVol=6000 ; profi covox
 SDVol=4000         ; soundrive
 GSVol=8000         ; general sound (for both high- and low- level emulation modes)
 BASSVol=8000       ; MOD-player of BASS.DLL
+MoonSoundVol=8000  ; ZXM-MoonSound
 
 [NGS]           ; neo gs settings
 RamSize=2048    ; ngs ram size 2048, 4096
