Unreal: modified SD card delay, now settable in 3.5MHz CPU T-states, removed version string (build time used instead)

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -383,7 +383,7 @@ RamSize=2048    ; ngs ram size 2048, 4096
 [ZC]            ; Z-Controller settings
 ; sdcard image
 SDCARD=wc.img
-
+SDDelay=1500    ; delay before data token, T-states 3.5MHz
 
 [SAA1099]
 FQ=8000000
