--- a/pentevo/unreal/Unreal/Unreal.vcxproj
+++ b/pentevo/unreal/Unreal/Unreal.vcxproj
@@ -361,9 +361,11 @@ copy /y "$(ProjectDir)cfg\rom\*.*" "$(TargetDir)rom"
     <PostBuildEvent>
       <Command>rd /q /s "$(TargetDir)rom"
 md "$(TargetDir)rom"
+md "$(TargetDir)doc"
 copy /y "$(ProjectDir)lib\*.dll" "$(TargetDir)"
 copy /y "$(ProjectDir)cfg\*.*" "$(TargetDir)"
 copy /y "$(ProjectDir)cfg\rom\*.*" "$(TargetDir)rom"
+copy /y "$(ProjectDir)doc\*.*" "$(TargetDir)doc"
 ..\..\tools\7z\7z.exe e -y -bd -o"$(TargetDir)" .\cfg\hdd\wc.7z
 ..\..\tools\7z\7z.exe a -r -mx9 -y -bd "$(TargetDir)..\unreal.7z" "$(TargetDir)*"
 </Command>
