--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -63,6 +63,8 @@ SPGMemInit=0
 ; if you own internal PCI modem, use "settings/input" dialog to find out port
 Modem=NONE      ; NONE or COM1-COM255
 
+; ZiFi API layer1 emulated as bridge to COM-port
+ZiFi=NONE       ; NONE or COM1-COM255
 
 [AUTOLOAD]
 ; disk images and snapshot, loaded at startup
