--- a/pentevo/ide_video/cpld-ft/ide-video.qsf
+++ b/pentevo/ide_video/cpld-ft/ide-video.qsf
@@ -56,3 +56,79 @@ set_global_assignment -name OPTIMIZE_HOLD_TIMING OFF
 set_global_assignment -name OPTIMIZE_MULTI_CORNER_TIMING OFF
 set_global_assignment -name FITTER_EFFORT "STANDARD FIT"
 set_global_assignment -name MAX7000_DEVICE_IO_STANDARD "3.3-V LVTTL"
+set_location_assignment PIN_1 -to f_g[2]
+set_location_assignment PIN_2 -to f_g[3]
+set_location_assignment PIN_5 -to f_g[4]
+set_location_assignment PIN_6 -to f_g[5]
+set_location_assignment PIN_7 -to f_g[6]
+set_location_assignment PIN_8 -to f_g[7]
+set_location_assignment PIN_9 -to f_b[0]
+set_location_assignment PIN_10 -to f_b[1]
+set_location_assignment PIN_12 -to f_b[2]
+set_location_assignment PIN_13 -to f_b[3]
+set_location_assignment PIN_14 -to f_b[4]
+set_location_assignment PIN_16 -to f_b[5]
+set_location_assignment PIN_17 -to f_b[6]
+set_location_assignment PIN_19 -to f_b[7]
+set_location_assignment PIN_21 -to f_hs
+set_location_assignment PIN_22 -to f_vs
+set_location_assignment PIN_23 -to o_g[2]
+set_location_assignment PIN_24 -to o_g[3]
+set_location_assignment PIN_72 -to v_g[1]
+set_location_assignment PIN_25 -to o_g[1]
+set_location_assignment PIN_27 -to o_g[4]
+set_location_assignment PIN_28 -to o_g[0]
+set_location_assignment PIN_29 -to o_b[0]
+set_location_assignment PIN_30 -to o_r[4]
+set_location_assignment PIN_31 -to o_b[1]
+set_location_assignment PIN_32 -to o_r[3]
+set_location_assignment PIN_35 -to o_b[2]
+set_location_assignment PIN_36 -to o_r[2]
+set_location_assignment PIN_37 -to o_b[3]
+set_location_assignment PIN_40 -to o_r[1]
+set_location_assignment PIN_41 -to o_b[4]
+set_location_assignment PIN_42 -to o_r[0]
+set_location_assignment PIN_44 -to pal_sel
+set_location_assignment PIN_45 -to m_sel
+set_location_assignment PIN_46 -to o_hs
+set_location_assignment PIN_20 -to f_clk
+set_location_assignment PIN_47 -to o_clk
+set_location_assignment PIN_48 -to o_vs
+set_location_assignment PIN_49 -to v_hs
+set_location_assignment PIN_50 -to v_vs
+set_location_assignment PIN_52 -to v_clk
+set_location_assignment PIN_54 -to v_b[7]
+set_location_assignment PIN_55 -to v_b[6]
+set_location_assignment PIN_56 -to v_b[5]
+set_location_assignment PIN_57 -to v_b[4]
+set_location_assignment PIN_58 -to v_b[3]
+set_location_assignment PIN_60 -to v_b[2]
+set_location_assignment PIN_61 -to v_b[1]
+set_location_assignment PIN_63 -to v_b[0]
+set_location_assignment PIN_64 -to v_g[7]
+set_location_assignment PIN_67 -to v_g[6]
+set_location_assignment PIN_68 -to v_g[5]
+set_location_assignment PIN_69 -to v_g[4]
+set_location_assignment PIN_70 -to v_g[3]
+set_location_assignment PIN_71 -to v_g[2]
+set_location_assignment PIN_75 -to v_g[0]
+set_location_assignment PIN_76 -to v_r[7]
+set_location_assignment PIN_77 -to v_r[6]
+set_location_assignment PIN_79 -to v_r[5]
+set_location_assignment PIN_80 -to v_r[4]
+set_location_assignment PIN_81 -to v_r[3]
+set_location_assignment PIN_83 -to v_r[2]
+set_location_assignment PIN_84 -to v_r[1]
+set_location_assignment PIN_85 -to v_r[0]
+set_location_assignment PIN_88 -to ft_miso
+set_location_assignment PIN_87 -to ft_int_n
+set_location_assignment PIN_89 -to f_r[0]
+set_location_assignment PIN_90 -to f_r[1]
+set_location_assignment PIN_92 -to f_r[2]
+set_location_assignment PIN_93 -to f_r[3]
+set_location_assignment PIN_94 -to f_r[4]
+set_location_assignment PIN_96 -to f_r[5]
+set_location_assignment PIN_97 -to f_r[6]
+set_location_assignment PIN_98 -to f_r[7]
+set_location_assignment PIN_99 -to f_g[0]
+set_location_assignment PIN_100 -to f_g[1]
