--- a/pentevo/unreal/Unreal/Unreal.vcxproj
+++ b/pentevo/unreal/Unreal/Unreal.vcxproj
@@ -328,8 +328,12 @@
     </Link>
     <ProjectReference />
     <PostBuildEvent>
-      <Command>
-      </Command>
+      <Command>copy /y "$(ProjectDir)lib\*.dll" "$(TargetDir)"
+copy /y "$(ProjectDir)cfg\*.*" "$(TargetDir)"
+if not exist "$(TargetDir)rom\" md "$(TargetDir)rom"
+copy /y "$(ProjectDir)cfg\rom\*.*" "$(TargetDir)rom"
+..\..\tools\7z\7z.exe e -y -bd -o"$(TargetDir)" .\cfg\hdd\wc.7z
+</Command>
     </PostBuildEvent>
     <ResourceCompile>
       <AdditionalIncludeDirectories>wtl</AdditionalIncludeDirectories>
