Unreal: fixed broken #EFF7.2 unlock for #7FFD, fixed broken Z-Controller in Baseconf, VDAC2 is disabled in .ini by default

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -18,7 +18,9 @@ ULAPLUS=TYPE1
 
 ; ZX-Evo Video DAC resolution: NONE, 3BIT, 4BIT, 5BIT
 TS_VDAC=5BIT
-TS_VDAC2=1
+
+; ZX-Evo Video DAC2 using FT812 (0 - disabled, 1 - enabled)
+TS_VDAC2=0
 
 ; OUT (C), 0 value
 OUT_C_0=0
