Unreal: added toggle TSU layers dialog

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -748,6 +748,7 @@ main.size2=ALT 2           ; set double window size (in windowed mode)
 main.sizem=ALT 3           ; maximize window (in windowed mode)
 main.memsearch=ALT F6      ; search in memory for changed values (cheats, etc)
 main.savevideo=CONTROL F8  ; save video
+main.tsutoggle=ALT CONTROL TIL ; toggle TSU layers
 
 ; keys in all monitor windows
 
