Unreal: added VDAC resolution select in Settings menu

--- a/pentevo/unreal/Unreal/Unreal.rc
+++ b/pentevo/unreal/Unreal/Unreal.rc
@@ -126,20 +126,6 @@ IDR_MAINMENU MENU
 // Dialog resources
 //
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
-IDD_TSUTOGGLE DIALOG 0, 0, 84, 76
-STYLE DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
-CAPTION "Toggle TSU layers"
-FONT 8, "MS Sans Serif"
-{
-    AUTOCHECKBOX    "Graphics layer", IDC_TSUTOGGLE_GFX, 11, 11, 61, 8
-    AUTOCHECKBOX    "Tile #0 layer", IDC_TSUTOGGLE_TILE0, 11, 26, 55, 8
-    AUTOCHECKBOX    "Tile #1 layer", IDC_TSUTOGGLE_TILE1, 11, 41, 55, 8
-    AUTOCHECKBOX    "Sprite layer", IDC_TSUTOGGLE_SPRITE, 11, 56, 51, 8
-}
-
-
-
-LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 IDD_ARC DIALOG 0, 0, 208, 90
 STYLE DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
 CAPTION "Select file"
@@ -615,10 +601,24 @@ IDD_TAPE DIALOG 0, 0, 210, 135
 STYLE DS_3DLOOK | DS_SETFONT | WS_BORDER | WS_CHILDWINDOW
 FONT 8, "MS Sans Serif"
 {
-    LISTBOX         IDC_TAPE, 7, 7, 194, 58, WS_TABSTOP | WS_VSCROLL | LBS_NOTIFY
+    LISTBOX         IDC_TAPE, 7, 7, 194, 50, WS_TABSTOP | WS_VSCROLL | LBS_NOTIFY
     LTEXT           "Note: ESC,F3 - load tape, ESC,F7 - start/stop tape", IDC_STATIC, 7, 121, 183, 8, SS_LEFT
     AUTOCHECKBOX    "Tape &autostart", IDC_TAPE_AUTOSTART, 7, 108, 66, 8
     AUTOCHECKBOX    "Tape &traps", IDC_TAPE_TRAPS, 106, 108, 54, 8
+}
+
+
+
+LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
+IDD_TSUTOGGLE DIALOG 0, 0, 84, 76
+STYLE DS_MODALFRAME | DS_SETFONT | WS_CAPTION | WS_POPUP | WS_SYSMENU
+CAPTION "Toggle TSU layers"
+FONT 8, "MS Sans Serif"
+{
+    AUTOCHECKBOX    "Graphics layer", IDC_TSUTOGGLE_GFX, 11, 11, 61, 8
+    AUTOCHECKBOX    "Tile #0 layer", IDC_TSUTOGGLE_TILE0, 11, 26, 55, 8
+    AUTOCHECKBOX    "Tile #1 layer", IDC_TSUTOGGLE_TILE1, 11, 41, 55, 8
+    AUTOCHECKBOX    "Sprite layer", IDC_TSUTOGGLE_SPRITE, 11, 56, 51, 8
 }
 
 
@@ -654,7 +654,7 @@ FONT 8, "MS Sans Serif", 0, 0, 0
 
 
 LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
-IDD_VIDEO DIALOGEX 0, 0, 213, 161
+IDD_VIDEO DIALOGEX 0, 0, 213, 180
 STYLE DS_3DLOOK | DS_SETFONT | WS_BORDER | WS_CHILDWINDOW
 FONT 8, "MS Sans Serif", 0, 0, 1
 {
@@ -681,6 +681,8 @@ FONT 8, "MS Sans Serif", 0, 0, 1
     COMBOBOX        IDC_BORDERSIZE, 89, 34, 117, 60, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST
     LTEXT           "Window Size", IDC_B_TITLE2, 7, 36, 49, 8, SS_LEFT
     AUTOCHECKBOX    "ULA-Plus", IDC_ULAPLUS, 7, 105, 50, 10
+    LTEXT           "VDAC resolution", IDC_STATIC, 7, 152, 52, 8, SS_LEFT
+    COMBOBOX        IDC_VDAC, 82, 150, 125, 60, WS_TABSTOP | WS_VSCROLL | CBS_DROPDOWNLIST
 }
 
 
