Unreal: added toggle flic/noflic hotkey

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -702,6 +702,7 @@ main.lockmouse=SHIFT ESC   ; read kempston mouse in windowed mode
 main.monitor=TIL           ; for hackers only
 main.selectfilter=F4       ; select video filter
 main.selectdriver=SHIFT F4 ; select video driver for some filters
+main.flictoggle=CONTROL SHIFT F4 ; toggle flic/noflic
 main.fullscreen=ALT ENTER  ; toggle full-screen on/off
 main.pause=PAUSE           ; pause
 main.selectfix=GRMUL       ; select video parameter
