Unreal: added toggle status line

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -624,6 +624,8 @@ sys=rom\zxevo.rom:3
 [LEDS]
 ; enable leds
 leds=1
+; enable statis line
+status=1
 ; ay amplitude peaks on keyboard leds
 KBD_AY=0
 
@@ -712,6 +714,7 @@ main.decfix=SHIFT GRSUB    ; fine tuneup
 main.incfix10=GRADD        ; tuneup
 main.decfix10=GRSUB        ; tuneup
 main.leds=GRDIV            ; leds on/off
+main.status=ALT GRDIV      ; status line on/off
 main.maxspeed=NUMLOCK      ; max speed on/off
 main.pokedialog=F6         ; enter poke(s)
 main.starttape=F7          ; start/stop tape
