--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -317,11 +317,11 @@ ffmpeg.vout=video#.avi
 ;ffmpeg.vout=video#.mpg
 
 ;# RTMP streaming: justin.tv
-;ffmpeg.parm=-af volume=3.000000 -r 10 -ss 00:00:00.500 -f flv 
+;ffmpeg.parm=-af volume=3.000000 -r 10 -ss 00:00:00.500 -f flv
 ;ffmpeg.vout=rtmp://live.justin.tv/app/live_74829844_mfrdpoeg034tn03gn03ring3f0rngc
 
 ;# RTMP streaming: own3d.tv
-;ffmpeg.parm=-af volume=3.000000 -r 10 -ss 00:00:00.500 -c:v libx264 -pix_fmt yuvj420p -preset:v veryfast -profile:v baseline -crf 10 -f flv 
+;ffmpeg.parm=-af volume=3.000000 -r 10 -ss 00:00:00.500 -c:v libx264 -pix_fmt yuvj420p -preset:v veryfast -profile:v baseline -crf 10 -f flv
 ;ffmpeg.vout=rtmp://live.eu.own3d.tv/live/b8493921_949585_kjhb5632l3l1
 
 ;# RTMP streaming: twitch.tv
@@ -406,8 +406,8 @@ UseSamples=0                    ; 0 - square tones, 1 - digital samples (low qua
 ;   QUADRO  - pentagon 2nd AY on #AFFD,#EFFD
 ;   POS     - power of sound turbo-AY (bit 0 of port #1F)
 ;   CHRV    - NedoPC turbo-sound (switch chip on selection reg #FE/FF)
-Scheme=CHRV
-
+;   AYX32   - AYX32 chip
+Scheme=AYX32
 
 ; STEREO.PRESET_NAME=A_left,A_right,B_left,B_right,C_left,C_right
 ; (you can define your custom presets, all numbers are from [0; 100])
