--- a/pentevo/demos/examples/ft_pong/spg.ini
+++ b/pentevo/demos/examples/ft_pong/spg.ini
@@ -1,9 +1,9 @@
 Desc = FT Pong
-Start = 0x8000
+Start = 0x6000
 Stack = 0x5FFF
 Resident = 0x5B00
 Page3 = 0
 Clock = 2
 INT = 0
 Pager = 0
-Block = 0xC000,2,main.bin
+Block = 0xE000,5,main.bin
