FT812 SDK: changed build, added functions

--- a/pentevo/sdk/ft812sdk/test4/res/spg.ini
+++ b/pentevo/sdk/ft812sdk/test4/res/spg.ini
@@ -1,4 +1,4 @@
-Desc = Game
+Desc = Test 4
 Start = 0xC000
 Stack = 0x4000
 Resident = 0x5B00
@@ -8,7 +8,7 @@ INT = 0
 Pager = 0
 Compression = -1
 Block = 0xC000,8,obj/code.c
-Block = 0xC000,5,../gamelib/warning.scr
+Block = 0xC000,5,../sdklib/warning.scr
 Compression = 0
 Block = 0xC000,16,res/1.dxt
 Block = 0xC000,32,res/2.dxt
