--- a/pentevo/sdk/ft812sdk/test3/res/spg.ini
+++ b/pentevo/sdk/ft812sdk/test3/res/spg.ini
@@ -1,4 +1,4 @@
-Desc = Game
+Desc = Test 3
 Start = 0xC000
 Stack = 0x4000
 Resident = 0x5B00
@@ -7,4 +7,4 @@ Clock = 2
 INT = 0
 Pager = 0
 Block = 0xC000,8,obj/code.c
-Block = 0xC000,5,../gamelib/warning.scr
+Block = 0xC000,5,../sdklib/warning.scr
