--- a/pentevo/sdk/ft812sdk/test5/res/spg.ini
+++ b/pentevo/sdk/ft812sdk/test5/res/spg.ini
@@ -1,4 +1,4 @@
-Desc = Game
+Desc = Test 5
 Start = 0xC000
 Stack = 0x4000
 Resident = 0x5B00
@@ -7,7 +7,7 @@ Clock = 2
 INT = 0
 Pager = 0
 Block = 0xC000,8,obj/code.c
-Block = 0xC000,5,../gamelib/warning.scr
+Block = 0xC000,5,../sdklib/warning.scr
 Block = 0xC000,16,res/alphabase.scr
 Block = 0xC000,17,res/banka.scr
 Block = 0xC000,18,res/clonewarrior.scr
