--- a/pentevo/unreal/Unreal/Unreal2010.vcxproj
+++ b/pentevo/unreal/Unreal/Unreal2010.vcxproj
@@ -336,7 +336,7 @@
 copy /y "$(ProjectDir)cfg\*.*" "$(TargetDir)"
 if not exist "$(TargetDir)rom\" md "$(TargetDir)rom"
 copy /y "$(ProjectDir)cfg\rom\*.*" "$(TargetDir)rom"
-..\..\tools\7z\7z.exe e -y -bd -o"$(TargetDir)" .\cfg\hdd\wc.7z
+call "$(ProjectDir)build\makewc.bat" $(TargetDir)
 </Command>
     </PostBuildEvent>
     <ResourceCompile>
@@ -386,7 +386,7 @@ copy /y "$(ProjectDir)cfg\*.*" "$(TargetDir)"
 copy /y "$(ProjectDir)cfg\rom\*.*" "$(TargetDir)rom"
 copy /y "$(ProjectDir)doc\*.*" "$(TargetDir)doc"
 del /q "$(TargetDir)..\unreal.7z"
-..\..\tools\7z\7z.exe e -y -bd -o"$(TargetDir)" .\cfg\hdd\wc.7z
+call "$(ProjectDir)build\makewc.bat" $(TargetDir)
 ..\..\tools\7z\7z.exe a -r -mx9 -y -bd "$(TargetDir)..\unreal.7z" "$(TargetDir)*"
 </Command>
       <Message>
