Unreal: added whole RAM dump save

--- a/pentevo/unreal/Unreal/cfg/Unreal.ini
+++ b/pentevo/unreal/Unreal/cfg/Unreal.ini
@@ -745,13 +745,13 @@ main.qload3=SHIFT F3       ; quick load from qsave3.sna
 main.keystick=SCLOCK       ; toggle keystick mode
 main.autofire=ALT NUMLOCK  ; toggle autofire mode
 main.saveall=F9            ; quick save cmos and disks
+main.saveram=ALT F9        ; quick save RAM dump
 main.xtkbd=ALT CONTROL Z   ; enable/disable ATM XT keyboard (emulation controls blocked!)
 main.pastetext=ALT SHIFT INS ; copy text from clipboard to keyboard buffer
 main.size1=ALT 1           ; set normal window size (in windowed mode)
 main.size2=ALT 2           ; set double window size (in windowed mode)
 main.sizem=ALT 3           ; maximize window (in windowed mode)
 main.memsearch=ALT F6      ; search in memory for changed values (cheats, etc)
-main.savevideo=CONTROL F8  ; save video
 main.tsutoggle=ALT CONTROL TIL ; toggle TSU layers
 
 ; keys in all monitor windows
